--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $( document ).ready(function(){
 <div id="ModulePicker" class="StartHidden"></div>
 <div id="CV" class = "StartHidden"><br></div>
 <button type="button" id="GenerateButton" onclick="GeneratePage()" class="StartHidden">
-Generate it!</button>
+Generate printable page!</button>
 <script>
 </script>
 </body>
